--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 
     //Crash reporting
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation "com.google.firebase:firebase-core:16.0.4"
+    implementation "com.google.android.gms:play-services-ads:$rootProject.firebaseVersion"
 
     //Android Support Components
     implementation "com.android.support:appcompat-v7:$rootProject.supportVerion"
